[package]
name = "ark_web_starter"
version = "0.1.0"
authors = ["Jabulba <Jabulba@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
serde = "1.0.126"
tokio = { version = "1.6.1", features = ["full"] }
subprocess = "0.2.7"